Semi-Final verson
Finished all required pages. May require additional changes to go live.

--- a/RankenConcernReport/Web.config
+++ b/RankenConcernReport/Web.config
@@ -13,7 +13,35 @@
         <add name="RankenConcernConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ConcernDatabase.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
+    <appSettings>
+        <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+    </appSettings>
+
+    <location path="default.aspx">
+      <system.web>
+       <authorization>
+        <allow users ="*" />
+      </authorization>
+     </system.web>
+    </location>
+  
+    <location path="Success.aspx">
+      <system.web>
+        <authorization>
+          <allow users ="*" />
+        </authorization>
+      </system.web>
+    </location>
+  
+  
     <system.web>
+      <authentication mode="Forms">
+        <forms loginUrl="Logon.aspx" name=".ASPXFORMSAUTH" defaultUrl="Admin.aspx"/>
+      </authentication>
+      <authorization>
+        <deny users="?"/>  
+      </authorization>
+      
       <compilation debug="true" targetFramework="4.5.2" />
       <httpRuntime targetFramework="4.5.2" />
     </system.web>
