--- a/RankenConcernReport/Web.config
+++ b/RankenConcernReport/Web.config
@@ -6,44 +6,62 @@
   -->
 
 <configuration>
+     <system.web>
+      <customErrors mode="Off"/>
+     </system.web>
 
     <connectionStrings>
-        <add name="ConcernConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Concern.mdf;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
-        <add name="RankenConcernConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ConcernDatabase.mdf;Integrated Security=True"
+        <!--<add name="ConcernConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Concern.mdf;Integrated Security=True"
+            providerName="System.Data.SqlClient" />-->
+        <add name="RankenConcernConnectionString" connectionString="Server=iwt\sqlexpress;Database=ConcernDatabase;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <appSettings>
         <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
     </appSettings>
 
-    <location path="default.aspx">
+  <system.web>
+    <authentication mode="Forms">
+      <forms loginUrl="Logon.aspx" name=".ASPXFORMSAUTH" defaultUrl="Admin.aspx"/>
+    </authentication>
+    <authorization>
+      <deny users="?"/>
+    </authorization>
+    <compilation debug="true" targetFramework="4.5.2" />
+    <httpRuntime targetFramework="4.5.2" />
+  </system.web>
+    
+    <location path="Default.aspx">
       <system.web>
        <authorization>
         <allow users ="*" />
       </authorization>
+        <compilation debug="true" targetFramework="4.5.2" />
      </system.web>
     </location>
   
     <location path="Success.aspx">
       <system.web>
         <authorization>
-          <allow users ="*" />
+          <allow users="*"/>
         </authorization>
       </system.web>
     </location>
-  
-  
-    <system.web>
-      <authentication mode="Forms">
-        <forms loginUrl="Logon.aspx" name=".ASPXFORMSAUTH" defaultUrl="Admin.aspx"/>
-      </authentication>
-      <authorization>
-        <deny users="?"/>  
-      </authorization>
-      
-      <compilation debug="true" targetFramework="4.5.2" />
-      <httpRuntime targetFramework="4.5.2" />
-    </system.web>
+
+   <location path="StyleSheet.css">
+     <system.web>
+       <authorization>
+         <allow users="*"/>
+        </authorization>
+      </system.web>
+    </location>
+
+   <location path="RankenLogo.jpg">
+     <system.web>
+       <authorization>
+         <allow users="*"/>
+       </authorization>
+     </system.web>
+   </location>
 
 </configuration>
